--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@web/dev-server": "^0.4.2",
     "concurrently": "^8.2.2",
+    "daisyui": "^4.6.2",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.1.0",
